fix: image height on small screens

--- a/apps/laudebugs/src/components/featured.module.scss
+++ b/apps/laudebugs/src/components/featured.module.scss
@@ -70,6 +70,7 @@
     }
     .image {
       width: 100%;
+      height: 300px;
     }
   }
 }
